# hash-semantic-nerf

./: .gitignore  README.md  pyproject.toml
hash_nerf/: hash_nerf.py  hash_nerf_config.py  hash_nerf_fieldhead.py  hash_nerf_fieldheadname.py  hash_nerf_fields.py  hash_nerf_renderer.py
hash_nerf/data/: base_hash_dataparser.py  hash_dataset.py  hash_nerf_dataparser.py
meshes/: point_cloud.ply
preprocessing/consistency/: Dockerfile  clear_dataset.py  masks_consist.py  masks_consist_v2.py  multi_iou.py  run.sh  squeeze.py
preprocessing/embedding/: Dockerfile  create_database.py  create_dataset_emb.py  make_pred.py
preprocessing/segmentation/: Dockerfile  cupy_module.py  generate_dataset.py  segment.py
